fixing bug with bad URI