@@ -11,7 +11,10 @@ import io.netty.handler.codec.http.HttpVersion;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.MalformedURLException;
 import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.URL;
 import java.nio.charset.Charset;
 import java.util.Map;
 import java.util.zip.GZIPInputStream;
@@ -51,6 +54,7 @@ import org.springframework.stereotype.Component;
 import com.outgrader.proxy.core.advertisment.processor.IAdvertismentProcessor;
 import com.outgrader.proxy.core.exceptions.AbstractOutgraderException;
 import com.outgrader.proxy.core.external.IExternalSender;
+import com.outgrader.proxy.core.statistics.IStatisticsHandler;
 import com.outgrader.proxy.external.impl.exceptions.ExternalSenderException;
 
 /**
@@ -67,9 +71,12 @@ public class ExternalSenderImpl implements IExternalSender {
 
 	private HttpClient httpClient;
 
+	private final IStatisticsHandler statisticsHandler;
+
 	@Inject
-	public ExternalSenderImpl(final IAdvertismentProcessor responseProcessor) {
+	public ExternalSenderImpl(final IAdvertismentProcessor responseProcessor, final IStatisticsHandler statisticsHandler) {
 		this.responseProcessor = responseProcessor;
+		this.statisticsHandler = statisticsHandler;
 	}
 
 	@Profiled
@@ -236,7 +243,14 @@ public class ExternalSenderImpl implements IExternalSender {
 			throw new IllegalArgumentException("Unsupported HTTP Method <" + method + ">");
 		}
 
-		result.setURI(URI.create(uri));
+		try {
+			URL url = new URL(uri);
+
+			result.setURI(new URI(url.getProtocol(), url.getUserInfo(), url.getHost(), url.getPort(), url.getPath(), url.getQuery(), url
+					.getRef()));
+		} catch (URISyntaxException | MalformedURLException e) {
+			statisticsHandler.onError(uri, this, e.getMessage(), e);
+		}
 
 		return result;
 	}
